feat: done delete and fix some bugs
