# internal/api-gateway/routes/router.go
@@ -23,13 +23,14 @@ func NewRouter(
 	adminAddressTypeHandler api_gateway_handler.IAdminAddressTypeHandler,
 	authenticationHandler api_gateway_handler.IAuthenticationHandler,
 	moduleHandler api_gateway_handler.IModuleHandler,
-
+	permissionHandler api_gateway_handler.IPermissionsHandler,
 ) *Router {
 	apiV1Group := router.Group("/api/v1")
 
 	registerAdminAddressManagementEndpoint(apiV1Group, adminAddressTypeHandler)
 	registerAuthenticationManagementEndpoint(apiV1Group, authenticationHandler)
 	registerModuleEndpoint(apiV1Group, moduleHandler)
+	registerPermissionEndPoint(apiV1Group, permissionHandler)
 
 	return &Router{
 		Router: router,
@@ -55,6 +56,7 @@ func registerModuleEndpoint(group *gin.RouterGroup, handler api_gateway_handler.
 	adminModuleGroup.POST("", handler.CreateModule)
 	adminModuleGroup.PATCH("/:moduleID", handler.UpdateModule)
 	adminModuleGroup.GET("", handler.GetModuleList)
+	adminModuleGroup.DELETE("/:moduleID", handler.DeleteModuleByModuleID)
 }
 
 func registerPermissionEndPoint(group *gin.RouterGroup, handler api_gateway_handler.IPermissionsHandler) {
@@ -64,6 +66,7 @@ func registerPermissionEndPoint(group *gin.RouterGroup, handler api_gateway_hand
 	adminPermissionGroup.POST("", handler.CreatePermission)
 	adminPermissionGroup.PATCH("/:permissionID", handler.UpdatePermissionByPermissionID)
 	adminPermissionGroup.GET("", handler.GetPermissionsList)
+	adminPermissionGroup.DELETE("/:permissionID", handler.DeletePermissionByPermissionID)
 }
 
 func registerAuthenticationManagementEndpoint(group *gin.RouterGroup, handler api_gateway_handler.IAuthenticationHandler) {
